iKYC/SME Phase -1/Istio/Request-Routing/request-routing-demo/jwt-authentication/request_authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: global-jwt-auth
  namespace: istio-routing
spec:
  jwtRules:
    - issuer: "http://localhost:8080/realms/demo"
      jwksUri: "http://localhost:8080/realms/demo/protocol/openid-connect/certs"
